# embed_python_in_cxx

./: .gitignore  README.md  embed_python_in_cxx.includes  main.cpp  make.sh  meson.build  sample_python_code.py
